--- a/.github/workflows/push_experience.yml
+++ b/.github/workflows/push_experience.yml
@@ -1,10 +1,13 @@
 name: Push Experience Reminder
 
 on:
-  workflow_dispatch:   # Manual trigger
-  pull_request_target: # Safe for public repo PRs needing secrets
+  workflow_dispatch:       # manual trigger
+  pull_request_target:     # safe for PRs in public repo
+  push:
+    branches:
+      - main
   schedule:
-    - cron: '*/5 * * * *'  # Only works with secrets on default branch
+    - cron: '*/5 * * * *'
 
 jobs:
   push:
