--- a/.github/workflows/push_experience.yml
+++ b/.github/workflows/push_experience.yml
@@ -1,45 +1,26 @@
 name: Push Experience Reminder
-
+ 
 on:
-  workflow_dispatch:
-  pull_request_target:
-  push:
-    branches:
-      - main
   schedule:
-    - cron: '*/5 * * * *'
-
+    - cron: '*/5 * * * *' 
+  workflow_dispatch:      # Allows manual trigger
+ 
 jobs:
   push:
     runs-on: ubuntu-latest
-    
-    if: |
-      github.event_name == 'push' || 
-      github.event_name == 'schedule' || 
-      github.event_name == 'workflow_dispatch' || 
-      (github.event_name == 'pull_request_target' && github.event.pull_request.head.repo.full_name == github.repository)
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+ 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-
+ 
       - name: Install requests
         run: pip install requests
-
-      - name: Debug Secret Access
-        env:
-          PUSHBULLET_TOKEN: ${{ secrets.PUSHBULLET_TOKEN }}
-        run: |
-          echo "GitHub Event: ${{ github.event_name }}"
-          echo "PUSHBULLET_TOKEN length: ${#PUSHBULLET_TOKEN}"
-
+ 
       - name: Run Pushbullet script
+        run: python GB_experience_pushbullet.py
         env:
           PUSHBULLET_TOKEN: ${{ secrets.PUSHBULLET_TOKEN }}
-        run: |
-          python GB_experience_pushbullet.py
